--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,7 +41,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+q kill
@@ -197,9 +197,6 @@ hide_edge_borders both
 bar {
         status_command i3status
 
-        # Take a screenshot by right clicking on the bar
-        bindsym --release button3 exec flameshot gui
-
         colors {
 		background $bg-color
 
@@ -223,10 +220,9 @@ exec dunst # cathces flameshot notification; prevents crash
 
 # Automatically start applications
 exec discord
-exec brave
+exec firefox
 exec spotify
 
-exec cadmus
+exec feh --bg-fill /home/elia/Bilder/xavier-cuenca-w4-3.jpg # sets wallpaper
+exec xrandr --output DVI-D-0 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI-0 --mode 1920x1080 --pos 1920x0 --rotate >
 
-exec feh --bg-fill /home/grzesiekek/Pictures/xavier-cuenca-w4-3.jpg # sets wallpaper
-# xrandr --output DVI-D-0 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI-0 --mode 1920x1080 --pos 1920x0 --rotate normal --output DP-0 --off --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off --output DP-5 --off
