--- a/.config/i3/config
+++ b/.config/i3/config
@@ -224,5 +224,4 @@ exec firefox
 exec spotify
 
 exec feh --bg-fill /home/elia/Bilder/xavier-cuenca-w4-3.jpg # sets wallpaper
-exec xrandr --output DVI-D-0 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI-0 --mode 1920x1080 --pos 1920x0 --rotate >
-
+exec xrandr --output DVI-D-0 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI-0 --mode 1920x1080 --pos 1920x0 --rotate normal --output DP-0 --off --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off --output DP-5 --off
