--- a/.config/i3/config
+++ b/.config/i3/config
@@ -32,8 +32,9 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
@@ -216,16 +217,17 @@ bindsym $mod+Shift+p exec i3lock --color 000000 && systemctl suspend
 
 # Screenshot
 bindsym Print exec flameshot gui
-exec dunst # cathces flameshot notification; prevents crash
+exec dunst # catches flameshot notification; prevents crash
 
 # Indicate that specific apps have to go on specific workspaces
-#assign [class="potify"] $ws10
+#assign [class="spotify"] $ws10
 # Doesn't work for some reason
 
 # Automatically start applications
 exec discord
-exec firefox
+exec librewolf
 exec spotify
 
-exec feh --bg-fill /home/elia/Bilder/xavier-cuenca-w4-3.jpg # sets wallpaper
+#exec feh --bg-fill /home/elia/Pictures/xavier-cuenca-w4-3.jpg # sets wallpaper
+exec feh --bg-fill /home/elia/Pictures/weirdsun-without-cc.jpeg # sets wallpaper
 exec xrandr --output DVI-D-0 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI-0 --mode 1920x1080 --pos 1920x0 --rotate normal --output DP-0 --off --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off --output DP-5 --off
