--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,9 +30,11 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-# Use pactl to adjust volume in PulseAudio.
+# Use pactl to adjust audio (in pulseaudio).
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
+bindsym XF86AudioNext exec --no-startup-id playerctl next
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
@@ -217,6 +219,7 @@ bindsym $mod+Shift+p exec i3lock --color 000000 && systemctl suspend
 
 # Screenshot
 bindsym Print exec flameshot gui
+exec flameshot # starts it on i3 start
 exec dunst # catches flameshot notification; prevents crash
 
 # Indicate that specific apps have to go on specific workspaces
@@ -226,7 +229,7 @@ exec dunst # catches flameshot notification; prevents crash
 # Automatically start applications
 exec discord
 exec librewolf
-exec spotify
+exec env LD_PRELOAD=/usr/lib/spotify-adblock.so spotify %U #blocks spotify ads
 
 #exec feh --bg-fill /home/elia/Pictures/xavier-cuenca-w4-3.jpg # sets wallpaper
 exec feh --bg-fill /home/elia/Pictures/weirdsun-without-cc.jpeg # sets wallpaper
