--- a/.config/i3/config
+++ b/.config/i3/config
@@ -199,7 +199,7 @@ hide_edge_borders both
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3blocks
 		font pango: Noto Sans Regular 10
 
 		tray_output none
