--- a/.config/i3/config
+++ b/.config/i3/config
@@ -52,12 +52,12 @@ bindsym $mod+q kill
 # bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+#bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 #bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -nb '#282828' -sf '#fbf1c7' -sb '#1d2021' -nf '#ebdbb2'"
 
 # change focus
 bindsym $mod+j focus left
