--- a/.config/i3/config
+++ b/.config/i3/config
@@ -57,13 +57,18 @@ bindsym $mod+q kill
 #bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
-bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -nb '#282828' -sf '#fbf1c7' -sb '#1d2021' -nf '#ebdbb2'"
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -nb '#282828' -sf '#fbf1c7' -sb '#1d2021' -nf '#ebdbb2'"
+#bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -nb '#282828' -sf '#fbf1c7' -sb '#1d2021' -nf '#ebdbb2'"
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+#bindsym $mod+j focus left
+bindsym $mod+t focus down
+#bindsym $mod+k focus down
+bindsym $mod+n focus up
+#bindsym $mod+l focus up
+bindsym $mod+s focus right
+#bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -72,10 +77,14 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+#bindsym $mod+Shift+j move left
+bindsym $mod+Shift+t move down
+#bindsym $mod+Shift+k move down
+bindsym $mod+Shift+n move up
+#bindsym $mod+Shift+l move up
+bindsym $mod+Shift+s move right
+#bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -84,7 +93,8 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+g split h
+#bindsym $mod+h split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -93,7 +103,8 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+bindsym $mod+l layout stacking
+#bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
@@ -161,10 +172,14 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        #bindsym j resize shrink width 10 px or 10 ppt
+        bindsym t resize grow height 10 px or 10 ppt
+        #bindsym k resize grow height 10 px or 10 ppt
+        bindsym n resize shrink height 10 px or 10 ppt
+        #bindsym l resize shrink height 10 px or 10 ppt
+        bindsym s resize grow width 10 px or 10 ppt
+        #bindsym semicolon resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -239,3 +254,6 @@ exec xrandr --output DVI-D-0 --primary --mode 1920x1080 --pos 0x0 --rotate norma
 gaps inner 5
 gaps outer 1
 for_window [class="^.*"] border pixel 0 # Disables titlebars (needed for i3 gaps to work properly)
+
+# Origin fix
+for_window [instance="origin.exe"] floating enable
